# pyaf

./: .gitignore  Makefile  README.md  pyproject.toml
src/pyaf/: audiofile.py  flac.py  id3.py  id3_core.py  id3v2.py  id3v2_core.py  info.py  mp3.py  vorbis.py  vorbis_core.py  wave.py
testfiles/: Makefile
tests/: conftest.py  test_audiofile.py  test_flac.py  test_id3.py  test_id3_core.py  test_id3v2.py  test_id3v2_core.py  test_info.py  test_mp3.py  test_testfiles.py  test_version.py  test_vorbis.py  test_vorbis_core.py  test_wave.py
